--- a/sequence/index.html
+++ b/sequence/index.html
@@ -16,6 +16,14 @@
             padding: 0;
         }
 
+        body,
+        html {
+            background: #2b3990;
+            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            height: 100%;
+            overflow: hidden;
+        }
+
         #container {
             position: fixed;
             top: 0;
