Try to resume tone on click if it isn't running.

--- a/sequence/index.html
+++ b/sequence/index.html
@@ -103,6 +103,10 @@
 
                     row.addEventListener('click', function () {
 
+                        if (Tone.context.state !== 'running') {
+                            Tone.context.resume();
+                        }
+
                         row.classList.toggle('activeRow');
 
                     })
