--- a/sequence/index.html
+++ b/sequence/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sequence</title>
 
     <style>
         html,
@@ -16,8 +16,7 @@
             padding: 0;
         }
 
-        body,
-        html {
+        body {
             background: #2b3990;
             background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
             height: 100%;
@@ -82,11 +81,24 @@
 
         (function () {
 
+            // Event listeners.
+
+            heat.addEventListener('click', (e) => {
+
+                const x = parseInt(e.detail.x * window.innerWidth);
+                const y = parseInt(e.detail.y * window.innerHeight);
+
+                var element = document.elementFromPoint(x, y);
+
+                element.click();
+            });
+
+            //  Grid setup.
+
             let columns = 32;
             let rows = 12;
 
             let container = document.getElementById('container');
-            console.log(container);
 
             for (let x = 0; x < columns; x++) {
 
@@ -115,7 +127,7 @@
 
             }
 
-            //
+            // Synth setup.
 
             let notes = ["C3", "E3", "G3", "B3", "C4", "E4", "G4", "B4", "C5", "E5", "G5", "B5"];
 
@@ -134,7 +146,7 @@
             synth.volume.value = -12;
 
 
-            //
+            // Sequence setup.
 
             let currentColumn, lastColumn;
             let loop = new Tone.Sequence(function (time, columnIndex) {
@@ -146,23 +158,11 @@
 
                     currentRow = currentColumn.childNodes[rowIndex];
                     if (currentRow.classList.contains("activeRow")) {
-                        console.log("PLAY");
-
                         currentRow.classList.toggle('activeRow');
                         synth.triggerAttackRelease(notes[rowIndex], "8n");
-                        //break;
                     }
 
                 }
-
-                // var column = document.querySelector("tone-step-sequencer").currentColumn;
-                // column.forEach(function (val, i) {
-                //     if (val) {
-                //         //slightly randomized velocities
-                //         var vel = Math.random() * 0.5 + 0.5;
-                //         keys.get(noteNames[i]).start(time, 0, "32n", 0, vel);
-                //     }
-                // });
 
                 Tone.Draw.schedule(function () {
                     if (lastColumn) lastColumn.classList.toggle('activeColumn');
@@ -171,24 +171,9 @@
 
             }, [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31], "8n").start(0);
 
-            //
+            // Tone setup.
 
             Tone.Transport.start();
-
-            //
-
-            heat.addEventListener('click', (e) => {
-
-                const x = parseInt(e.detail.x * window.innerWidth);
-                const y = parseInt(e.detail.y * window.innerHeight);
-
-                console.log(x, y);
-
-                var element = document.elementFromPoint(x, y);
-
-                element.click();
-            });
-
 
         })();
 
