--- a/sequence/index.html
+++ b/sequence/index.html
@@ -143,7 +143,7 @@
                     release: 1
                 }
             });
-            synth.volume.value = -12;
+            //synth.volume.value = -12;
 
 
             // Sequence setup.
