--- a/sequence/index.html
+++ b/sequence/index.html
@@ -17,10 +17,10 @@
         }
 
         body {
-            background: #2b3990;
-            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-            height: 100%;
+            background-color: #2b3990;
+            background-color: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
             overflow: hidden;
+            height: 100%;
         }
 
         #container {
